Comp. service tickets endpoint unit tests
